Update python library requirements

--- a/config.yaml
+++ b/config.yaml
@@ -3,11 +3,12 @@ default:
   output_dir: output
   file_name_prefix: speech_
 openai:
-  model: tts-1-hd 
+  model: tts-1-hd
   voice: fable
 elevenlabs:
-  model_id: eleven_turbo_v2 
-  voice_id: abRFZIdN4pvo8ZPmGxHP
+  model_id: eleven_turbo_v2
+  voice_id: od84OdVweqzO3t6kKlWT
+  # abRFZIdN4pvo8ZPmGxHP
   voice_settings:
     stability: 0.5
     similarity_boost: 0.75
